writing to Firebase DB players section

--- a/index.html
+++ b/index.html
@@ -28,18 +28,21 @@
 </head>
 <body>
     <div class="container-fluid">
+        <!-- this is the top nav bar -->
         <div class="row">
             <div class="col-md-12">
                 <nav class="navbar navbar-dark bg-primary">
                     <a class="navbar-brand">Navbar</a>
-                    <form class="form-inline">
-                    <input id="inputPlayerName" class="form-control mr-lg-2" type="text" placeholder="Enter you name" aria-label="Enter Name">
+                    <form id="enter-name" class="form-inline">
+                    <input id="inputPlayerName" class="form-control mr-lg-2" type="text" placeholder="Enter your name" aria-label="Enter Name">
                     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Start Game</button>
                     </form>
                 </nav>
             </div>
         </div>
+        <!-- this is the game details section -->
         <div class="row">
+                <!-- player 1 details -->
             <div class="col-md-4">
                 <div class="row"> Player 1</div>
                 <div class="row">Timer</div>
@@ -50,27 +53,26 @@
                 <div class="row">Chat Text</div>
                 <div class="row">Chat Submit Button</div>
             </div>
+            <!-- running game result feed -->
             <div class="col-md-2">
                 Game results
             </div>
+            <!-- player 2 details -->
             <div class="col-md-4">
-                <div class="row"> Player 1</div>
-                <div class="row">Timer</div>
-                <div class="row">Message Box</div>
-                <div class="row">R P S buttons</div>
-                <div class="row">Random Button</div>
-                <div class="row">Score</div>
-                <div class="row">Chat Text</div>
-                <div class="row">Chat Submit Button</div>
+                <div class="row"> Player 2</div>
+                <div class="row">Timer 2</div>
+                <div class="row">Message Box 2</div>
+                <div class="row">R P S buttons 2</div>
+                <div class="row">Random Button 2</div>
+                <div class="row">Score 2</div>
+                <div class="row">Chat Text 2</div>
+                <div class="row">Chat Submit Button 2</div>
             </div>
         </div>  
     </div>
 
-
-
-
-
     <!-- style.css ref -->
     <link rel="stylesheet" href="assets/css/style.css">
+    <script src="assets/javascript/script.js"></script>
 </body>
 </html>
