changed from 2 player objects to only 1

--- a/index.html
+++ b/index.html
@@ -47,8 +47,14 @@
                 <div class="row"> Player 1</div>
                 <div class="row">Timer</div>
                 <div class="row">Message Box</div>
-                <div class="row">R P S buttons</div>
-                <div class="row">Random Button</div>
+                <div class="row">
+                    <button id="rock1" disabled="disabled">Rock</button>
+                    <button id="paper1" disabled="disabled">Paper</button>
+                    <button id="scissors1" disabled="disabled">Scissors</button>
+                </div>
+                <div class="row">
+                    <button id="random1" disabled="disabled">Random Pick</button>
+                </div>
                 <div class="row">Score</div>
                 <div class="row">Chat Text</div>
                 <div class="row">Chat Submit Button</div>
@@ -62,8 +68,14 @@
                 <div class="row"> Player 2</div>
                 <div class="row">Timer 2</div>
                 <div class="row">Message Box 2</div>
-                <div class="row">R P S buttons 2</div>
-                <div class="row">Random Button 2</div>
+                <div class="row">
+                    <button id="rock2" disabled="disabled">Rock</button>
+                    <button id="paper2" disabled="disabled">Paper</button>
+                    <button id="scissors2" disabled="disabled">Scissors</button>
+                </div>
+                <div class="row">
+                    <button id="random2" disabled="disabled">Random Pick</button>
+                </div>
                 <div class="row">Score 2</div>
                 <div class="row">Chat Text 2</div>
                 <div class="row">Chat Submit Button 2</div>
