Adding players, playing game, calculating result

--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
                 <div class="row">Timer</div>
                 <div class="row">Message Box</div>
                 <div class="row">
-                    <button id="rock1" disabled="disabled">Rock</button>
-                    <button id="paper1" disabled="disabled">Paper</button>
-                    <button id="scissors1" disabled="disabled">Scissors</button>
+                    <button id="rock1" class="play-btn" disabled="disabled">Rock</button>
+                    <button id="paper1" class="play-btn" disabled="disabled">Paper</button>
+                    <button id="scissors1" class="play-btn" disabled="disabled">Scissors</button>
                 </div>
                 <div class="row">
-                    <button id="random1" disabled="disabled">Random Pick</button>
+                    <button id="random1" class="play-btn" disabled="disabled">Random Pick</button>
                 </div>
                 <div class="row">Score</div>
                 <div class="row">Chat Text</div>
@@ -69,12 +69,12 @@
                 <div class="row">Timer 2</div>
                 <div class="row">Message Box 2</div>
                 <div class="row">
-                    <button id="rock2" disabled="disabled">Rock</button>
-                    <button id="paper2" disabled="disabled">Paper</button>
-                    <button id="scissors2" disabled="disabled">Scissors</button>
+                    <button id="rock2" class="play-btn" disabled="disabled">Rock</button>
+                    <button id="paper2" class="play-btn" disabled="disabled">Paper</button>
+                    <button id="scissors2" class="play-btn" disabled="disabled">Scissors</button>
                 </div>
                 <div class="row">
-                    <button id="random2" disabled="disabled">Random Pick</button>
+                    <button id="random2" class="play-btn" disabled="disabled">Random Pick</button>
                 </div>
                 <div class="row">Score 2</div>
                 <div class="row">Chat Text 2</div>
