--- a/index.html
+++ b/index.html
@@ -41,10 +41,12 @@
             </div>
         </div>
         <!-- this is the game details section -->
-        <div class="row">
+        <div class="row container-fluid">
                 <!-- player 1 details -->
-            <div class="col-md-4">
-                <div class="row"> Player 1</div>
+            <div class="col-md-4 align-self-center">
+                <div class="row">
+                    <p id="p1-name"></p>
+                </div>
                 <div class="row">Timer</div>
                 <div class="row">Message Box</div>
                 <div class="row">
@@ -52,29 +54,25 @@
                     <button id="paper1" class="play-btn" disabled="disabled">Paper</button>
                     <button id="scissors1" class="play-btn" disabled="disabled">Scissors</button>
                 </div>
-                <div class="row">
-                    <button id="random1" class="play-btn" disabled="disabled">Random Pick</button>
-                </div>
                 <div class="row">Score</div>
                 <div class="row">Chat Text</div>
                 <div class="row">Chat Submit Button</div>
             </div>
             <!-- running game result feed -->
             <div class="col-md-2">
-                Game results
+                <p id="results"></p>
             </div>
             <!-- player 2 details -->
-            <div class="col-md-4">
-                <div class="row"> Player 2</div>
+            <div class="col-md-4 align-self-center">
+                <div class="row">
+                    <p id="p2-name"></p>
+                </div>
                 <div class="row">Timer 2</div>
                 <div class="row">Message Box 2</div>
                 <div class="row">
                     <button id="rock2" class="play-btn" disabled="disabled">Rock</button>
                     <button id="paper2" class="play-btn" disabled="disabled">Paper</button>
                     <button id="scissors2" class="play-btn" disabled="disabled">Scissors</button>
-                </div>
-                <div class="row">
-                    <button id="random2" class="play-btn" disabled="disabled">Random Pick</button>
                 </div>
                 <div class="row">Score 2</div>
                 <div class="row">Chat Text 2</div>
