Udated readme and navbar header in html file

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="row">
             <div class="col-md-12">
                 <nav class="navbar navbar-dark bg-primary">
-                    <a class="navbar-brand">Navbar</a>
+                    <a class="navbar-brand">Rock Paper Scissors</a>
                     <form id="enter-name" class="form-inline">
                     <input id="inputPlayerName" class="form-control mr-lg-2" type="text" placeholder="Enter your name" aria-label="Enter Name">
                     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Start Game</button>
